--- a/sourse/pug/blocks/sObjectDetails/_sObjectDetails.scss
+++ b/sourse/pug/blocks/sObjectDetails/_sObjectDetails.scss
@@ -20,7 +20,7 @@
 		display: flex;
 		flex-direction: column-reverse;
 		gap: rem(36);
-		@include media-breakpoint-up(sm) {
+		@include media-breakpoint-up(md) {
 			flex-direction: column;
 		}
 	}
@@ -28,7 +28,33 @@
 		max-width: 100%;
 		color: $body-color;
 	}
-
+	.details-with-toggle {
+		@include media-breakpoint-down(md) {
+			margin-left: rem(-12);
+			margin-right: rem(-12);
+		}
+		&__stats-row {
+			--bs-gutter-x: #{rem(48)};
+			
+			@include media-breakpoint-up(md) {
+				// margin-bottom: rem(12);
+				// padding-bottom: rem(12);
+				&:after {
+					content: '';
+					position: absolute;
+					display: block;
+					height: 1px;
+					width: calc(100% - var(--bs-gutter-x));
+					top: 0;
+					left: calc(var(--bs-gutter-x) / 2);
+					background-color: $gray-200;
+				}
+			}
+		}
+		&__col {
+			min-width: auto;
+		}
+	}
 	@include media-breakpoint-up(xl) {
 	}
 	@include media-breakpoint-up(lg) {
