--- a/sourse/pug/blocks/sPageInfo/_sPageInfo.pug
+++ b/sourse/pug/blocks/sPageInfo/_sPageInfo.pug
@@ -14,6 +14,27 @@ mixin sPageInfo(data)
 				+e.body-row.row
 					.col-md
 						+circularProgressBar(34)
+						+detailsWithToggle()
+							mixin item(key, val, warning)
+								+e.col.col-md
+									+e.item
+										span!= key
+										p(class=(warning ? 'text-danger' : ''))
+											if warning
+												+icon("warning")
+											!= val
+							+e.stats-row.row
+								+item('Срок', '90дней')
+								+item('До конца', '76 дней')
+								+item('План', '11 фев 24')
+								+item('Факт', `14 фев 24`, true)
+								+item('График', '3 дн', true)
+							+e.stats-row--without-span.row
+								+item('Дома', '3 дом')
+								+item('Подъезды', '12 под')
+								+item('Квартиры', '728 кв')
+								+item('Помещения', '1350 пом')
+								+item('Площадь', 'S 3440 м²')
 					+e.col.col-md-auto
 						+e.inner-row.row
 							.col-12
