--- a/sourse/sass/_sprite.scss
+++ b/sourse/sass/_sprite.scss
@@ -111,6 +111,10 @@
 	font-size:math.div(24,10)*1rem;
 	width: math.div(24,24)*1em;
 }
+.icon-warning {
+	font-size:math.div(20,10)*1rem;
+	width: math.div(20,20)*1em;
+}
 .icon-whatsapp {
 	font-size:math.div(16,10)*1rem;
 	width: math.div(16,16)*1em;
