--- a/sourse/pug/blocks/mixin-wrap/mixin-wrap.pug
+++ b/sourse/pug/blocks/mixin-wrap/mixin-wrap.pug
@@ -130,7 +130,7 @@ mixin btnMore()
 		+icon('chevron-down')
 
 mixin detailsWithToggle()
-	+b.details-with-toggle--js
+	+b.details-with-toggle--js&attributes(attributes)
 		+e.wrap
 			block
 		+e.BUTTON.btn-more.btn.d-md-none
@@ -166,7 +166,7 @@ mixin bottomControlBar()
 	+b.bottom-control-bar
 		.row
 			.col.me-auto
-				p Выбрано: 1&nbsp;элемент(-ов)
+				p Выбрано: 1 элемент(–ов)
 			.col-auto
 				+e.btn.btn.btn-dark(href='#')
 					+icon('edit')
@@ -198,3 +198,11 @@ mixin circularProgressBar(precent, status='Прогресс')
 					else 
 						+icon('done')
 				p!= status
+
+mixin selectStatus()
+	+b.select-status
+		select(class="custom-select--js")
+			option(data-img='img/svg/play.svg') В работе
+			option(data-img='img/svg/done.svg') Планирование
+			option(data-img='img/svg/time.svg') Завершен
+			option(data-img='img/svg/archive.svg') Архив
