--- a/sourse/pug/blocks/sMainInfo/_sMainInfo.scss
+++ b/sourse/pug/blocks/sMainInfo/_sMainInfo.scss
@@ -1,23 +1,25 @@
 // start .sMaininfo
 .sMainInfo {
-	// --sPT: #{rem()};
+	// --sPT: #{rem(24)};
 	// --sPB: #{rem()};
 	// --sTPB: #{rem()};
-	&__row{
-		// --bs-gutter-x: #{rem()};
-		// --bs-gutter-y: #{rem()};
-
+	@include media-breakpoint-up(md) {
+		--sPT: #{rem(24)};
 	}
-	.section-title{
-		
+	.container-fluid {
+		@include media-breakpoint-down(md) {
+			--bs-gutter-x: 0;
+		}
 	}
-	&__col{
-
+	&__wrap {
+		background-color: #fff;
+		padding: rem(42) rem(12) rem(18);
+		overflow: hidden;
+		border-bottom: 1px solid $gray-200;
+		@include media-breakpoint-up(md) {
+			padding: rem(24) rem(48);
+		}
 	}
-	&__item{
-
-	}
-
 	@include media-breakpoint-up(xl) {}
 	@include media-breakpoint-up(lg) {}
 	@include media-breakpoint-up(md) {}
