--- a/sourse/sass/_sprite.scss
+++ b/sourse/sass/_sprite.scss
@@ -7,6 +7,10 @@
 	fill: currentColor;
 }
 
+.icon-add {
+	font-size:math.div(20,10)*1rem;
+	width: math.div(20,20)*1em;
+}
 .icon-archive {
 	font-size:math.div(48,10)*1rem;
 	width: math.div(48,48)*1em;
