--- a/sourse/pug/blocks/mixin-wrap/_mixin-wrap.scss
+++ b/sourse/pug/blocks/mixin-wrap/_mixin-wrap.scss
@@ -1119,6 +1119,30 @@
 	background-color: #fff;
 	table {
 		width: 100%;
+		tr {
+			position: relative;
+			&.inner-level {
+				& > td {
+					padding: 0;
+					&[colspan='9'] {
+						padding-left: 0 !important;
+					}
+				}
+			}
+			&.active {
+				td {
+					background-color: $gray-100;
+					border-top: 1px solid $gray-200;
+					border-bottom: 1px solid $gray-200;
+					.h3 {
+						color: $primary;
+					}
+					.icon {
+						transform: rotate(90deg);
+					}
+				}
+			}
+		}
 		th {
 			@include text-14;
 			padding: rem(12);
@@ -1138,32 +1162,107 @@
 					padding-right: rem(48);
 				}
 			}
+		}
+		table td {
+			&:first-child {
+				@include media-breakpoint-up(xl) {
+					padding-left: rem(80);
+				}
+				td {
+					&:first-child {
+						@include media-breakpoint-up(xl) {
+							padding-left: rem(80);
+						}
+					}
+					td {
+						&:first-child {
+							@include media-breakpoint-up(xl) {
+								padding-left: rem(112);
+							}
+						}
+						td {
+							&:first-child {
+								@include media-breakpoint-up(xl) {
+									padding-left: rem(112);
+								}
+							}
+						}
+					}
+				}
+			}
+			.main-table__title {
+				p {
+					margin-bottom: 0;
+					font-size: rem(16);
+					@include media-breakpoint-up(md) {
+						font-size: rem(18);
+					}
+					@include media-breakpoint-up(xxl) {
+						font-size: rem(20);
+					}
+				}
+			}
+			.add-more {
+				@include media-breakpoint-up(lg) {
+					padding: rem(18) rem(20) rem(12) rem(80);
+				}
+			}
+		}
+		th, table td {
 			&:nth-child(1) {
-				width: rem(480);
+				min-width: rem(256);
 			}
 			&:nth-child(2) {
 				width: rem(86);
+				min-width: rem(68);
 			}
 			&:nth-child(3) {
 				width: rem(86);
+				min-width: rem(68);
 			}
 			&:nth-child(4) {
 				width: rem(86);
+				min-width: rem(68);
 			}
 			&:nth-child(5) {
 				width: rem(86);
+				min-width: rem(68);
 			}
 			&:nth-child(6) {
 				width: rem(136);
+				min-width: rem(116);
 			}
 			&:nth-child(7) {
 				width: rem(144);
+				min-width: rem(124);
 			}
 			&:nth-child(8) {
 				width: rem(96);
+				min-width: rem(76);
+			}
+			&:nth-child(9) {
+				width: rem(216);
+				min-width: rem(196);
 			}
 		}
 		td {
+			font-size: rem(14);
+			padding: rem(10) rem(12);
+			line-height: 1.25;
+			@include media-breakpoint-up(md) {
+				padding: rem(15) rem(3) rem(15);
+				font-size: rem(16);
+			}
+			&:first-child {
+				@include media-breakpoint-up(md) {
+					padding-left: rem(48);
+				}
+			}
+			&:last-child {
+				@include media-breakpoint-up(md) {
+					padding-right: rem(48);
+				}
+			}
 			&.add-more {
 				padding: rem(12);
 				@include media-breakpoint-up(md) {
@@ -1186,6 +1285,80 @@
 		}
 		@include media-breakpoint-up(md) {
 			font-size: rem(16);
+		}
+	}
+	&__title {
+		display: flex;	
+		align-items: center;
+		.custom-input {
+			padding-left: 0;
+			margin-bottom: 0;
+			margin-right: rem(12);
+			input {
+				background-repeat: no-repeat;
+				background-position: center;
+				background-size: contain;
+				margin-left: 0;
+				width: rem(20);
+				height: rem(20);
+				border-color: $gray-200;
+				border-radius: 4px;
+				margin-top: 0;
+				background-color: #fff;
+				&:checked {
+					&[type="checkbox"] {
+						background-color: $primary;
+						--bs-form-check-bg-image: url("data:image/svg+xml,%3Csvg width='20' height='20' viewBox='0 0 20 20' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath fill-rule='evenodd' clip-rule='evenodd' d='M12.9498 7.02161C12.7781 7.0651 12.8136 7.03155 10.7482 9.10029L8.76949 11.0823L8.03443 10.3448C7.15403 9.46153 7.1435 9.45373 6.85373 9.47056C6.65447 9.48211 6.56387 9.53511 6.3124 9.7872C6.03813 10.0621 6.00113 10.1323 6.00113 10.3771C6.00113 10.663 5.91115 10.5549 7.33391 11.9779C8.70385 13.348 8.60003 13.2586 8.80445 13.2432C8.97416 13.2304 8.87567 13.3234 11.4554 10.739C14.2479 7.94148 13.994 8.22397 13.994 7.91502C13.994 7.67436 13.9673 7.62472 13.6844 7.33845C13.3813 7.0318 13.2068 6.95653 12.9498 7.02161Z' fill='white'/%3E%3C/svg%3E%0A");
+					}
+				}
+			}
+		}
+		h3 {
+			margin-bottom: 0;
+			font-size: rem(18);
+			@include media-breakpoint-up(md) {
+				font-size: rem(20);
+			}
+			@include media-breakpoint-up(xxl) {
+				font-size: rem(24);
+			}
+		}
+	}
+	&__toggle-dropdown {
+		.icon {
+			@include mt;
+			font-size: rem(20);
+			flex: 0 0 auto;
+			margin-right: rem(12);
+			color: $accent;
+			&:hover {
+				transform: rotate(90deg);
+			}
+		}
+	}
+	&__goals {
+		display: flex;
+		align-items: center;
+		img {
+			width: 100%;
+			max-width: rem(20);
+			flex: 0 0 auto;
+			margin-right: rem(6);
+		}
+		span {
+			color: $success;
+		}
+	}
+	&__progress {
+		display: flex;
+		align-items: center;
+		color: $primary;
+		font-weight: 500;
+		img {
+			width: 100%;
+			max-width: rem(20);
+			flex: 0 0 auto;
+			margin-right: rem(6);
 		}
 	}
 }
