--- a/sourse/pug/blocks/mixin-wrap/mixin-wrap.pug
+++ b/sourse/pug/blocks/mixin-wrap/mixin-wrap.pug
@@ -191,22 +191,112 @@ mixin selectStatus()
 mixin mainTable()
 	+b.main-table
 		table
-			tr
-				th Объект
-				th Под
-				th Эт
-				th Кв
-				th Пом
-				th Площ
-				th Задачи
-				th Прогресс
-				th Сроки
-			tr
-				td(colspan='9').add-more
-					+e.add-new(href='#')
-						+icon('add')
-						| Добавить дом
-
+			thead
+				tr
+					th Объект
+					th Под
+					th Эт
+					th Кв
+					th Пом
+					th Площ
+					th Задачи
+					th Прогресс
+					th Сроки
+			tbody
+				tr
+					td(colspan='9').add-more
+						+e.add-new(href='#')
+							+icon('add')
+							| Добавить дом
+				mixin firstLevel(title, pod, floor, room, placment, area, done, all, precent, date)
+					tr&attributes(attributes)
+						td
+							+e.title
+								+e.toggle-dropdown(href='#'): +icon('chevron-right')
+								+in-c()
+								.h3!= title
+						td!= pod
+						td!= floor
+						td!= room
+						td!= placment
+						td!= area
+						td
+							+e.goals
+								+img('img/svg/fist.svg')
+								span!= done
+								!= all
+						td
+							+e.progress
+								+img('img/svg/finish.svg')
+								!= precent
+						td!= date
+						block
+				mixin secondLevel(title, pod, floor, room, placment, area, done, all, precent, date, toggle=true)
+					tr&attributes(attributes)
+						td 
+							+e.title
+								if toggle
+									+e.toggle-dropdown(href='#'): +icon('chevron-right')
+								+in-c()
+								p!= title
+						td!= pod
+						td!= floor
+						td!= room
+						td!= placment
+						td!= area
+						td
+							+e.goals
+								+img('img/svg/fist.svg')
+								span!= done
+								!= all
+						td
+							+e.progress
+								+img('img/svg/finish.svg')
+								!= precent
+						td!= date
+						block
+				+firstLevel('1. Дом №1', '3', '-', '130', '268', '1300 м²', 321, '/433', '67%', '11 ноя 23 – 11 фев 24')
+				+firstLevel('2. Дом №2', '4', '-', '126', '280', '1291 м²', 81, '/441', '67%', '15 ноя 23 – 10 фев 24').active
+					tr.inner-level
+						td(colspan='9')
+							table
+								tr
+									td(colspan='9').add-more
+										+e.add-new(href='#')
+											+icon('add')
+											| Добавить подъезд
+								+secondLevel('2.1. Подъезд №1', '-', '12', '36', '104', '696 м²', '321', '/433', '59%', '15 ноя 23 – 10 фев 24')
+								+secondLevel('2.1. Подъезд №2', '-', '12', '36', '104', '696 м²', '321', '/433', '59%', '15 ноя 23 – 10 фев 24').active
+									tr.inner-level
+										td(colspan='9')
+											table
+												tr
+													td(colspan='9').add-more
+														+e.add-new(href='#')
+															+icon('add')
+															| Добавить этаж
+												+secondLevel('2.2.1. Этаж №1', '-', '-', '16', '66', '436 м²', '81', '/441', '56%', '15 ноя 23 – 10 фев 24')
+												+secondLevel('2.2.1. Этаж №2', '-', '-', '16', '66', '436 м²', '81', '/441', '56%', '15 ноя 23 – 10 фев 24').active
+													tr.inner-level
+														td(colspan='9')
+															table
+																tr
+																	td(colspan='9').add-more
+																		+e.add-new(href='#')
+																			+icon('add')
+																			| Добавить квартиру
+																+secondLevel('2.2.2.1. Квартира №27', '-', '-', '-', '120', '426 м²', '15', '/45', '19%', '15 ноя 23 – 10 фев 24')
+																+secondLevel('2.2.2.1. Квартира №27', '-', '-', '-', '120', '426 м²', '15', '/45', '19%', '15 ноя 23 – 10 фев 24').active
+																	tr.inner-level
+																		td(colspan='9')
+																			table
+																				tr
+																					td(colspan='9').add-more
+																						+e.add-new(href='#')
+																							+icon('add')
+																							| Добавить помещение
+																				+secondLevel('2.2.2.2.1. Кухня', '-', '-', '-', '-', '546 м²', '321', '/433', '90%', '15 ноя 23 – 10 фев 24', false)
+																				+secondLevel('2.2.2.2.1. Санузел', '-', '-', '-', '-', '546 м²', '321', '/433', '90%', '15 ноя 23 – 10 фев 24', false)
 //- Always at bottom of the file
 
 mixin circularProgressBar(precent, status='Прогресс')
