--- a/sourse/sass/_sprite.scss
+++ b/sourse/sass/_sprite.scss
@@ -31,6 +31,10 @@
 	font-size:math.div(20,10)*1rem;
 	width: math.div(20,20)*1em;
 }
+.icon-chevron-right {
+	font-size:math.div(20,10)*1rem;
+	width: math.div(20,20)*1em;
+}
 .icon-copy {
 	font-size:math.div(20,10)*1rem;
 	width: math.div(20,20)*1em;
