--- a/sourse/pug/blocks/mixin-wrap/_mixin-wrap.scss
+++ b/sourse/pug/blocks/mixin-wrap/_mixin-wrap.scss
@@ -732,29 +732,16 @@
 	}
 	svg {
 		position: relative;
-		width: rem(128);
-		height: rem(128);
+		width: rem(148);
 		transform: rotate(-90deg);
 		@include media-breakpoint-up(md) {
 			width: rem(216);
-			height: rem(216);
 		}
 		circle {
-			width: 100%;
-			height: 100%;
 			fill: none;
 			stroke: var(--bgColor);
-			stroke-width: rem(12);
+			stroke-width: rem(24);
 			opacity: .36;
-			cx: 64;
-			cy: 64;
-			r: 52;
-			@include media-breakpoint-up(md) {
-				stroke-width: rem(24);
-				cx: 108;
-				cy: 108;
-				r: 84;
-			}
 			&:last-of-type {
 				--dasharray: #{rem(327)};
 				stroke-dasharray: var(--dasharray);
@@ -857,6 +844,7 @@
 	background-color: $gray-700;
 	padding: rem(8) rem(12);
 	z-index: 100;
+	max-width: rem(1464);
 	@include media-breakpoint-up(md) {
 		margin-left: var(--asideW);
 		padding: rem(9) rem(24);
@@ -980,7 +968,7 @@
 		}
 	}
 	&__col {
-		min-width: rem(118);
+		min-width: calc(rem(110) + var(--bs-gutter-x));
 	}
 	&__item {
 		display: flex;
@@ -1122,6 +1110,7 @@
 		tr {
 			position: relative;
 			&.inner-level {
+				display: none;
 				& > td {
 					padding: 0;
 					&[colspan='9'] {
@@ -1134,11 +1123,16 @@
 					background-color: $gray-100;
 					border-top: 1px solid $gray-200;
 					border-bottom: 1px solid $gray-200;
-					.h3 {
+					.h3, p {
 						color: $primary;
 					}
 					.icon {
 						transform: rotate(90deg);
+					}
+				}
+				& + .inner-level {
+					& > td[colspan='9'] {
+						// border-bottom: 1px solid $gray-200;
 					}
 				}
 			}
@@ -1165,24 +1159,24 @@
 		}
 		table td {
 			&:first-child {
-				@include media-breakpoint-up(xl) {
+				@include media-breakpoint-up(md) {
 					padding-left: rem(80);
 				}
 				td {
 					&:first-child {
-						@include media-breakpoint-up(xl) {
+						@include media-breakpoint-up(md) {
 							padding-left: rem(80);
 						}
 					}
 					td {
 						&:first-child {
-							@include media-breakpoint-up(xl) {
+							@include media-breakpoint-up(md) {
 								padding-left: rem(112);
 							}
 						}
 						td {
 							&:first-child {
-								@include media-breakpoint-up(xl) {
+								@include media-breakpoint-up(md) {
 									padding-left: rem(112);
 								}
 							}
@@ -1203,14 +1197,20 @@
 				}
 			}
 			.add-more {
-				@include media-breakpoint-up(lg) {
+				@include media-breakpoint-up(md) {
 					padding: rem(18) rem(20) rem(12) rem(80);
 				}
 			}
 		}
 		th, table td {
 			&:nth-child(1) {
-				min-width: rem(256);
+				min-width: rem(270);
+				@include media-breakpoint-up(md) {
+					min-width: rem(380);
+				}
+				@include media-breakpoint-up(xxl) {
+					min-width: rem(256);
+				}
 			}
 			&:nth-child(2) {
 				width: rem(86);
@@ -1242,13 +1242,21 @@
 			}
 			&:nth-child(9) {
 				width: rem(216);
-				min-width: rem(196);
+				min-width: rem(170);
+				@include media-breakpoint-up(md) {
+					min-width: rem(220);
+				}
+				@include media-breakpoint-up(xxl) {
+					min-width: rem(196);
+				}
 			}
 		}
 		td {
 			font-size: rem(14);
 			padding: rem(10) rem(12);
 			line-height: 1.25;
+			// border-top: 1px solid transparent;
+			// border-bottom: 1px solid transparent;
 			@include media-breakpoint-up(md) {
 				padding: rem(15) rem(3) rem(15);
 				font-size: rem(16);
@@ -1267,6 +1275,15 @@
 				padding: rem(12);
 				@include media-breakpoint-up(md) {
 					padding: rem(20) rem(48) rem(12);
+				}
+			}
+		}
+	}
+	& > table > tbody > tr {
+		&.active {
+			& + .inner-level {
+				& > td[colspan='9'] {
+					border-bottom: 1px solid $gray-200;
 				}
 			}
 		}
