--- a/sourse/sass/_sprite.scss
+++ b/sourse/sass/_sprite.scss
@@ -15,6 +15,10 @@
 	font-size:math.div(48,10)*1rem;
 	width: math.div(48,48)*1em;
 }
+.icon-attach {
+	font-size:math.div(24,10)*1rem;
+	width: math.div(24,24)*1em;
+}
 .icon-basket {
 	font-size:math.div(24,10)*1rem;
 	width: math.div(22,24)*1em;
