--- a/sourse/sass/_base.scss
+++ b/sourse/sass/_base.scss
@@ -814,3 +814,132 @@ h1 {
 		display: none;
 	}
 }
+
+
+.table{
+	width: 100%;
+	td{
+		height: 52px;
+	}
+	tr:not(:last-child) td{
+		border-bottom: 1px solid #E2E2E2;
+	}
+}
+.main-table--calendar{
+	table{
+		height: 0;
+		th{
+			width: rem(24px) !important;
+			padding: 0 !important;
+			min-width: 1px !important;
+		}
+		td{
+			padding: 0 !important;
+			&:not(:last-child){
+				border-right: 1px dashed #E2E2E2;
+			}
+		}
+	}
+}
+.td-inner{
+	position: relative;
+	height: rem(60);
+}
+td:not(:first-child) .sMainInfo__line{
+	left: 50%;
+}
+.sMainInfo__line{
+	height: rem(20);
+	position: absolute;
+	left: 0;
+	width: calc(100% * var(--w1) + 1px * var(--w1));
+	top: 50%;
+	margin-top: rem(-10);
+	&::after,
+	&::before{
+		content: '';
+		position: absolute;
+		left: 0;
+		top: 0;
+		width: 100%;
+		height: 100%;
+		background-color: var(--bg);
+	}
+	&::before{
+		opacity: 0.36;
+	}
+	&::after{
+		width: var(--w2);
+	}
+}
+
+.panel-body{
+	@include media-breakpoint-up(ьв) {
+		padding: rem(48);
+	}
+	padding: 18px 12px;
+	background-color: #fff;
+}
+.avatar-block{
+	text-transform: uppercase;
+	border-radius: 50%;
+	background-color: #fff;
+	background-color: $primary;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	line-height: 1;
+	&--sm
+	{
+		width: rem(36);
+		height: rem(36);
+	}
+}
+
+.row--xxl{
+	@include media-breakpoint-up(xxl) {
+
+		--bs-gutter-x: #{rem(48)}
+	}
+}
+
+.file-item{
+	display: flex;
+	@include roww(5px);
+	align-items: center;
+	margin-bottom: rem(12);
+	&__name{
+		color: $body-color;
+	}
+	&__size{
+		color: $secondary;
+	}
+	&__btn-delete{
+		@include mt;
+		cursor: pointer;
+		color: $secondary;
+		&:hover{
+			color: $danger;
+		}
+		.icon{
+			font-size: rem(20);
+		}
+	}
+}
+
+.upload-field{
+	label{
+		display: flex;
+		align-items: center;
+		width: 100%;
+		
+	}
+	.icon{
+		font-size: rem(24);
+		margin-right: rem(6);
+	}
+	&__file-name{
+		@include ellips;
+		max-width: calc(100% - #{rem(30)});
+	}
+}
